--- a/deploy/release.yaml
+++ b/deploy/release.yaml
@@ -104,7 +104,8 @@ spec:
       serviceAccountName: knative-openshift-ingress
       containers:
         - name: knative-openshift-ingress
-          image: quay.io/openshift-knative/knative-openshift-ingress:v0.0.9
+          #image: quay.io/openshift-knative/knative-openshift-ingress:v0.0.9
+          image: savita3020/knative-openshift-ingress:test3
           command:
           - knative-openshift-ingress
           imagePullPolicy: Always
